# PersianSyntheticData

./: .env.sample  .gitignore  Experience.ipynb  README.md  gen_synthetic.py  gen_synthetic_emotions.py  pyproject.toml
datasets/: آموزش آنلاین_dataset.jsonl  آموزش و یادگیری_dataset.jsonl  احساسات و عواطف_dataset.jsonl  اخلاق_dataset.jsonl  ادبیات_dataset.jsonl  ارتباطات و رسانه_dataset.jsonl  اقتصاد رفتاری_dataset.jsonl  اقتصاد و تجارت_dataset.jsonl  امنیت_dataset.jsonl  انرژی_dataset.jsonl  انسان‌شناسی_dataset.jsonl  بیوتکنولوژی_dataset.jsonl  تاریخ هنر_dataset.jsonl  تاریخ_dataset.jsonl  تغییرات اقلیمی_dataset.jsonl  توسعه اقتصادی_dataset.jsonl  جامعه و افراد_dataset.jsonl  جامعه‌شناسی_dataset.jsonl  حقوق_dataset.jsonl  حمل و نقل_dataset.jsonl  خلاقیت و هنر دیجیتال_dataset.jsonl  دین و فلسفه_dataset.jsonl  روابط بین‌الملل_dataset.jsonl  روان‌شناسی_dataset.jsonl  ریاضیات_dataset.jsonl  زبان‌ها و زبانشناسی_dataset.jsonl  زمین‌شناسی_dataset.jsonl  زیست‌شناسی_dataset.jsonl  سلامت و بهداشت_dataset.jsonl  سیاست_dataset.jsonl  شیمی_dataset.jsonl  صنایع دستی_dataset.jsonl  علوم اجتماعی_dataset.jsonl  علوم پایه_dataset.jsonl  فرهنگ و هنر_dataset.jsonl  فضا_dataset.jsonl  فناوری اطلاعات_dataset.jsonl  فناوری و نوآوری_dataset.jsonl  محیط زیست_dataset.jsonl  مد و زیبایی_dataset.jsonl  (+11 more)
prompts/: topic_prompts.json
topic_trees/: آموزش آنلاین_tree.jsonl  آموزش و یادگیری_tree.jsonl  احساسات و عواطف_tree.jsonl  اخلاق_tree.jsonl  ادبیات_tree.jsonl  ارتباطات و رسانه_tree.jsonl  اقتصاد رفتاری_tree.jsonl  اقتصاد و تجارت_tree.jsonl  امنیت_tree.jsonl  انرژی_tree.jsonl  تاریخ هنر_tree.jsonl  (+40 more)
